# AEGIS

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aegis.sh  aegis.yaml  config.example.yaml  pyproject.toml  requirements.txt
aegis/: __init__.py  __main__.py  cli.py  config.py  engine.py  gui.py  metrics.py  models.py  offense.py  orchestrator.py  parsers.py  reporting.py  reporting_core.py  safety.py
aegis/ai/: __init__.py  brain.py  ollama.py  payload_engine.py  prompts.py  router.py  strategist.py
aegis/ai/knowledge/: __init__.py
aegis/ai/prompts/: __init__.py  classic.py  redteam.py
aegis/ai/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
aegis/console/: __init__.py  repl.py
aegis/evasion/: __init__.py  rate_limit.py  waf_bypass.py
aegis/offense/: __init__.py  offense.py  oob.py
aegis/offense/chains/: __init__.py  chains.py
aegis/offense/scanners/: __init__.py
aegis/pivot/: __init__.py  scope.py  validator.py
aegis/recon/: __init__.py  discovery.py  fingerprint.py  schema.py
aegis/reporting/: __init__.py  attack_mapper.py  narrative.py
aegis/reporting/exporters/: __init__.py  sarif.py
aegis/session/: __init__.py  manager.py
aegis/transport/: __init__.py  proxy.py  tls.py
aegis/transport/protocols/: __init__.py  grpc.py  http2.py  websocket.py
assets/: make_logo.py
docs/: AI.md  ARCHITECTURE.md  SECURITY.md  USAGE.md
scripts/: capture_cli.py  capture_gui.py  capture_lab.py  make_banner.py
tests/: conftest.py  test_ai_reporting.py  test_engine_orchestrator.py  test_metrics_models.py  test_offense.py  test_parsers.py  test_safety.py  test_v3_fixes.py  test_v3_protocols_pivot.py
