[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-api"
version = "2.0.0"
description = "AEGIS - Autonomous API Stress & Security Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BugMeDude" }]
keywords = ["api", "load-testing", "stress-testing", "security", "ai", "ollama", "appsec"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing :: Traffic Generation",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
gui = ["matplotlib>=3.7", "numpy>=1.24", "Pillow>=10.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
aegis = "aegis.cli:main"

[tool.setuptools.packages.find]
include = ["aegis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_classes = "Test*Case"
